// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatePicker > has a custom label 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r3»"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md justify-start font-normal"
    data-state="closed"
    type="button"
  >
    <span>
      Date of birth
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`DatePicker > is disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r4»"
    aria-expanded="false"
    aria-haspopup="dialog"
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md justify-start font-normal"
    data-state="closed"
    disabled=""
    type="button"
  >
    <span>
      Pick a date
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`DatePicker > shows a default/preselected month and date 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r1»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md justify-start"
    data-state="open"
    type="button"
    value="Tue, 15 Mar 2022 00:00:00 GMT"
  >
    March 15th, 2022
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`DatePicker > shows calendar with specific month 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r2»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md justify-start font-normal"
    data-state="open"
    type="button"
  >
    <span>
      Pick a date
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`DatePicker > shows the current month 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-«r0»"
    aria-expanded="true"
    aria-haspopup="dialog"
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md justify-start font-normal"
    data-state="open"
    type="button"
  >
    <span>
      Pick a date
    </span>
    <svg
      class="lucide lucide-calendar-days ml-auto h-4 w-4 opacity-50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 2v4"
      />
      <path
        d="M16 2v4"
      />
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="4"
      />
      <path
        d="M3 10h18"
      />
      <path
        d="M8 14h.01"
      />
      <path
        d="M12 14h.01"
      />
      <path
        d="M16 14h.01"
      />
      <path
        d="M8 18h.01"
      />
      <path
        d="M12 18h.01"
      />
      <path
        d="M16 18h.01"
      />
    </svg>
  </button>
</DocumentFragment>
`;
